Update and rename qqqq.html to xinxin.html

--- a/xinxin.html
+++ b/xinxin.html
@@ -136,7 +136,7 @@ document.body.clientWidth; // fix bug in chrome.
     a.clearRect(0, 0, W, W);
     J.sort(G);
     for (i = 0; L = J[i++]; a.drawImage(M[L[3] + 1], 207 + L[0] * A + L[2] * T(D) >> 0, L[1] >> 1)) {
-      if (i == 2e3) a.fillText('Merry Christmas!', U, 345);
+      if (i == 2e3) a.fillText('鑫鑫的树!', U, 345);
       if (!(i % 7)) a.drawImage(M[13], ((157 * (i * i) + T(D * 5 + i * i) * 5) % W) >> 0, ((113 * i + (D * i) / 60) % (290 + i / 99)) >> 0);
     }
     D += .02
